--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,6 +5,8 @@
     <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+      <%= f.label :age %>
+      <%= f.number_field :age, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
