--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,8 @@
       <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
       <%= f.label :age %>
       <%= f.number_field :age, class: 'form-control' %>
+      <%= f.label :city_id %>
+      <%= f.number_field :city_id, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
