--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,10 @@
       <%= f.number_field :age, class: 'form-control' %>
     </div>
     <div class="form-group">
+      <%= f.label :city_id %>
+      <%= f.number_field :city_id, class: 'form-control' %>
+    </div>
+    <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
     </div>
