--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,7 @@
 <h3>Welcome</h3>
+
+<%= javascript_tag do %>
+  window.current_user_name = "<%=j current_user.nil? ? '' : current_user[:name] %>";
+<% end %>
+
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
