--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -8,4 +8,6 @@
 <% end %>
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
+  <li><%= link_to 'Cities', cities_path %></li>
+  <li><%= link_to 'Create city', new_city_path %></li>
 <% end %>
